--- a/SerialCom.Frontend/MainWindow.xaml
+++ b/SerialCom.Frontend/MainWindow.xaml
@@ -30,9 +30,9 @@
                     <RowDefinition Height="110"></RowDefinition>
                 </Grid.RowDefinitions>
                 <GroupBox Header="Wybór portu">
-                    <ComboBox ItemsSource="{Binding PortNames}" SelectedIndex="{Binding SelectedPort}"></ComboBox>
+                    <ComboBox ItemsSource="{Binding PortNames}" SelectedIndex="{Binding SelectedPort}" IsEnabled="{Binding ConfigEnabled}"></ComboBox>
                 </GroupBox>
-                <GroupBox Header="Prędkość transmisji" Grid.Row="1">
+                <GroupBox Header="Prędkość transmisji" Grid.Row="1" IsEnabled="{Binding ConfigEnabled}">
                     <ComboBox ItemsSource="{Binding BaudRateValues}" SelectedIndex="{Binding SelectedBaudRateValue}"></ComboBox>
                 </GroupBox>
                 <GroupBox Header="Format znaku" Grid.Row="2">
@@ -42,21 +42,21 @@
                             <RowDefinition Height="*"></RowDefinition>
                             <RowDefinition Height="*"></RowDefinition>
                         </Grid.RowDefinitions>
-                        <GroupBox Header="Bity danych">
+                        <GroupBox Header="Bity danych" IsEnabled="{Binding ConfigEnabled}">
                             <ComboBox SelectedIndex="{Binding SelectedDataBitsCount}">
                                 <ComboBoxItem>7</ComboBoxItem>
                                 <ComboBoxItem>8</ComboBoxItem>
                             </ComboBox>
                         </GroupBox>
-                        <GroupBox Header="Parzystość" Grid.Row="1">
+                        <GroupBox Header="Parzystość" Grid.Row="1" IsEnabled="{Binding ConfigEnabled}">
                             <ComboBox ItemsSource="{Binding ParityValues}" SelectedIndex="{Binding SelectedParity}"></ComboBox>
                         </GroupBox>
-                        <GroupBox Header="Bity stopu"  Grid.Row="2">
+                        <GroupBox Header="Bity stopu"  Grid.Row="2" IsEnabled="{Binding ConfigEnabled}">
                             <ComboBox ItemsSource="{Binding StopBitsCountValues}" SelectedIndex="{Binding SelectedStopBitsCount}"></ComboBox>
                         </GroupBox>
                     </Grid>
                 </GroupBox>
-                <GroupBox Header="Kontrola przepływu" Grid.Row="3">
+                <GroupBox Header="Kontrola przepływu" Grid.Row="3" IsEnabled="{Binding ConfigEnabled}">
                     <ComboBox ItemsSource="{Binding FlowControlValues}" SelectedIndex="{Binding SelectedFlowControlValues}"></ComboBox>
                 </GroupBox>
                 <GroupBox Header="Wybór terminatora" Grid.Row="4">
@@ -66,7 +66,7 @@
                             <RowDefinition Height="*"></RowDefinition>
                             <RowDefinition Height="*"></RowDefinition>
                         </Grid.RowDefinitions>
-                        <ComboBox Margin="2" SelectedIndex="{Binding SelectedTerminator}">
+                        <ComboBox Margin="2" SelectedIndex="{Binding SelectedTerminator}" IsEnabled="{Binding ConfigEnabled}">
                             <ComboBoxItem>No Terminator</ComboBoxItem>
                             <ComboBoxItem>CR</ComboBoxItem>
                             <ComboBoxItem>LF</ComboBoxItem>
@@ -91,10 +91,10 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBox Text="{Binding Message}" Margin="2" Grid.ColumnSpan="3"></TextBox>
-                <Button Content="Wyślij" Grid.Row="1" Margin="2" Command="{Binding SendMessageButtonCommand}"/>
-                <Button Content="Wyczyść" Grid.Row="1" Margin="2" Grid.Column="1" Command="{Binding ClearMessageInput}"/>
-                <Button Content="Ping" Grid.Row="1" Margin="2" Grid.Column="2" Command="{Binding PingButtonCommand}"/>
+                <TextBox Text="{Binding Message}" Margin="2" Grid.ColumnSpan="3" IsEnabled="{Binding Connected}"></TextBox>
+                <Button Content="Wyślij" Grid.Row="1" Margin="2" Command="{Binding SendMessageButtonCommand}" IsEnabled="{Binding Connected}"/>
+                <Button Content="Wyczyść" Grid.Row="1" Margin="2" Grid.Column="1" Command="{Binding ClearMessageInput}" IsEnabled="{Binding Connected}"/>
+                <Button Content="Ping" Grid.Row="1" Margin="2" Grid.Column="2" Command="{Binding PingButtonCommand}" IsEnabled="{Binding Connected}"/>
             </Grid>
         </GroupBox>
         <GroupBox Grid.Column="1" Header="Odebrane" Grid.RowSpan="2" Margin="5">
