--- a/SerialCom.Frontend/MainWindow.xaml
+++ b/SerialCom.Frontend/MainWindow.xaml
@@ -56,7 +56,7 @@
                         </GroupBox>
                     </Grid>
                 </GroupBox>
-                <GroupBox Header="Kontrola przepływu" Grid.Row="3" IsEnabled="{Binding ConfigEnabled}">
+                <GroupBox Header="Kontrola przepływu 2" Grid.Row="3" IsEnabled="{Binding ConfigEnabled}">
                     <ComboBox ItemsSource="{Binding FlowControlValues}" SelectedIndex="{Binding SelectedFlowControlValues}"></ComboBox>
                 </GroupBox>
                 <GroupBox Header="Wybór terminatora" Grid.Row="4">
