--- a/SerialCom.Frontend/MainWindow.xaml
+++ b/SerialCom.Frontend/MainWindow.xaml
@@ -56,7 +56,7 @@
                         </GroupBox>
                     </Grid>
                 </GroupBox>
-                <GroupBox Header="Kontrola przepływu 2" Grid.Row="3" IsEnabled="{Binding ConfigEnabled}">
+                <GroupBox Header="Kontrola przepływu" Grid.Row="3" IsEnabled="{Binding ConfigEnabled}">
                     <ComboBox ItemsSource="{Binding FlowControlValues}" SelectedIndex="{Binding SelectedFlowControlValues}"></ComboBox>
                 </GroupBox>
                 <GroupBox Header="Wybór terminatora" Grid.Row="4">
@@ -100,5 +100,17 @@
         <GroupBox Grid.Column="1" Header="Odebrane" Grid.RowSpan="2" Margin="5">
             <ListBox ItemsSource="{Binding ReceivedList, Mode=OneWay}" Margin="0,5,0,0"/>
         </GroupBox>
+        <Grid Grid.Column="1" Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <ToggleButton Margin="5" Content="RTS" Style="{DynamicResource PinStatus}"/>
+            <ToggleButton Grid.Column="1" Margin="5" Content="CTS" IsEnabled="False" IsChecked="{Binding CtsState}" Style="{DynamicResource PinStatus}"/>
+            <ToggleButton Grid.Column="2" Margin="5" Content="DTR" Style="{DynamicResource PinStatus}"/>
+            <ToggleButton Grid.Column="3" Margin="5" Content="DSR"  IsEnabled="False" IsChecked="{Binding DsrState}" Style="{DynamicResource PinStatus}"/>
+        </Grid>
     </Grid>
 </Window>
